infrastructure/external-services/redis/service-entry.yaml
apiVersion: networking.istio.io/v1beta1
kind: ServiceEntry
metadata:
  name: redis-external-se
  namespace: default
spec:
  hosts:
    - redis-external.default.svc.cluster.local
  location: MESH_EXTERNAL
  resolution: STATIC
  endpoints:
    - address: 172.19.0.60
      ports:
        tcp-redis: 6379
    - address: 172.19.0.61
      ports:
        tcp-redis: 6380
    - address: 172.19.0.62
      ports:
        tcp-redis: 6381
    - address: 172.19.0.63
      ports:
        tcp-redis: 6382
    - address: 172.19.0.64
      ports:
        tcp-redis: 6383
    - address: 172.19.0.65
      ports:
        tcp-redis: 6384
  ports:
    - number: 6379
      name: tcp-redis-0
      protocol: TCP
    - number: 6380
      name: tcp-redis-1
      protocol: TCP
    - number: 6381
      name: tcp-redis-2
      protocol: TCP
    - number: 6382
      name: tcp-redis-3
      protocol: TCP
    - number: 6383
      name: tcp-redis-4
      protocol: TCP
    - number: 6384
      name: tcp-redis-5
      protocol: TCP
